$Id$

GENERAL:
- (23/05/04) Creation of the 'FLF' library.
- (24/05/04) Creation of the 'CIO' library.
- (24/05/04) Adapting to changes in 'FLW' library.
- (24/05/04) Adapting to changes in 'TXF' library.
- (30/05/04) Adapting to changes in 'FLW' library.
- (31/05/04) Adapting to changes in 'FLW' library.
- (31/05/04) Using 'CIO' library instaed of 'STF' for 'c(out|in|err)'.

BSO:
- (12/03/04) Adding 'Convert()' function with 'String' parameter.
- (03/05/04) disable thread-unsafe functions when working in multithreading.
-			 fixing the 'Allocate' bug.
	
CCH:
- (20/05/04) Replacing the old 'Write', 'Fill' and 'Read' method.

CTN:
- Adding a 'FlushTest()' to '=' operator in debug mode.
- (23/04/04) Adding a test in debug mode to avoid retrieving of an undefined item.
- (10/05/04) Fixing 'Delete()' bug.

DTE:
- (15/04/04) Introducing the new structure.

EPSMSC:
- Adding 'EPSMSC_COPYRIGHT()' macro.

ERR:
- Adding some minor features for the 'Intentional' error type.
- (24/05/04) Using the 'cio' library instead of 'stf'.

FLW:
- (24/05/04) Removing the a tailing '_' to the object name.

IDXBTR
- Fixing bug in the 'tree_index_::Remove()' function

LCK:
- Adding 'GetUnlocked()' method.

SSNMNG:
- Using own row type for session id 'row__'.
- Adding 'sessions_manager_::IsValid()' method.
- Adding 'sessions_manager_::GetExpired()' methods.
- Adding navigation 'sessions_manager_::First()', 'sessions_manager_::Next()', ...) methods.
- (22/03/04) Fixing bug in session id creation.

STF:
- (24/05/04) Removing the console stuff (they are put in 'CIO' library).
- (24/05/04) Adating to changes in 'FLW' library.
- (24/05/04) Renaming the objects ('stream...' instead'(i|o)stream...', removing one tailing '_')

TOL:
- Adding the 'E_DISCLOSE' macro.
- (05/05/04) Adding a 'Clock()' temporary workaround for CW.
- (24/05/04) Using 'cio' library instead of 'stf'.

TTR:
- (23/05/04) Using 'CIO' library instead of 'STF'.
- (24/05/04) Adapting to changes in 'TXF' library.

TXF: